# roll-goal

./: .travis.yml  LICENSE  README.md  UpgradeLog.htm
Assets/Materials/: plat.mat
Assets/Script/: BoardController.cs
ProjectSettings/: ProjectSettings.asset
doc/: README.md
godot/: Main.tscn  Player.gd  Player.tscn  project.godot
godot/levels/: Level-1.tscn
godot/levels/level-parts/: Board.tscn  Start.tscn
godot/scenes/: Main.tscn  Player.tscn
godot/scenes/levels/: Level-1.tscn
godot/scenes/levels/level-parts/: Board.tscn  Cube.tscn  End.tscn  Start.tscn
godot/scenes/ui/: HUD.tscn
godot/scripts/: Camera.gd  Main.gd
godot/scripts/levels/level-parts/: End.gd
godot/scripts/ui/: HUD.gd
models/: board.blend  board.fbx  texturing.spp.painter_lock
sdl2/: .gitignore  CMakeLists.txt  README.md  conanfile.txt  wasm.profile  wasm.recipe.py
sdl2/lib/glad/src/: glad.c
sdl2/res/shaders/basic/: basic.frag  basic.vert  texture.frag  texture.vert
sdl2/res/shaders/ultralight/: shader_fill_frag.h  shader_fill_path_frag.h  shader_v2f_c4f_t2f_t2f_d28f_vert.h  shader_v2f_c4f_t2f_vert.h
sdl2/res/shaders/ultralight/ps/: fill.frag  fill_path.frag
sdl2/res/shaders/ultralight/vs/: v2f_c4f_t2f.vert  v2f_c4f_t2f_t2f_d28f.vert
sdl2/src/: game.cpp  game.h  main.cpp
sdl2/src/components/singleton/: game-input.h
sdl2/src/graphics/: buffer.cpp  buffer.h  gl-log-handler.h  renderer-api.cpp  renderer-api.h  renderer.cpp  renderer.h  shader.cpp  shader.h  ultralight-driver.cpp  ultralight-driver.h  vertex-array.cpp
sdl2/src/states/: game-over-state.cpp  game-over-state.h  i-state.h  level-state.cpp  level-state.h  states-manager.cpp  states-manager.h  title-screen-state.cpp  title-screen-state.h
sdl2/src/systems/: i-system.h  input-system.cpp  input-system.h  physic-system.cpp  physic-system.h  question-functions.h  render-system.cpp  render-system.h  systems-manager.cpp  systems-manager.h
sdl2/test/: exemples.spec.cpp  main.cpp
sdl2/test/states/: states-manager.spec.cpp
sdl2/test/systems/: systems-manager.spec.cpp
sdl2/wasm/: CMakeLists.txt  build.bat  build.sh  conanfile.py  conanfile.txt  emscripten.profile
sdl2/www/: index.html  roll-goal.js  roll-goal.wasm
src/UnrealBP/Config/: DefaultEditor.ini  DefaultEngine.ini  DefaultGame.ini
src/UnrealBP/Content/RollingBP/: RollingOverview.uasset
src/UnrealCPP/: UnrealCPP.uproject
src/UnrealCPP/Config/: DefaultEngine.ini  DefaultGame.ini
src/UnrealCPP/Source/: UnrealCPP.Target.cs  UnrealCPPEditor.Target.cs
src/UnrealCPP/Source/UnrealCPP/: UnrealCPP.Build.cs  UnrealCPP.cpp  UnrealCPPBall.cpp  UnrealCPPBall.h  UnrealCPPGameMode.cpp  UnrealCPPGameMode.h
src/godot/scenes/levels/: Level-1.tscn
src/godot/scenes/levels/level-parts/: Cube.tscn  Start.tscn
src/godot/scripts/: Main.gd
src/godot/scripts/levels/: Level-1.gd
src/godot/scripts/levels/level-parts/: Board.gd
src/godot/scripts/ui/: HUD.gd
src/raw-cpp/: CMakeLists.txt
src/raw-cpp/res/shaders/basic/: basic.frag
src/raw-cpp/res/shaders/ultralight/: shader_v2f_c4f_t2f_t2f_d28f_vert.h
src/raw-cpp/res/shaders/ultralight/ps/: fill_path.frag
src/raw-cpp/src/: main.cpp
src/raw-cpp/src/components/: mesh.h  rigid-body.h
src/raw-cpp/src/components/singletons/: game-input.h
src/raw-cpp/src/core/: tags.h
src/raw-cpp/src/graphics/: gl-log-handler.cpp  renderer-api.cpp  renderer.cpp  renderer.h  shader.h  ultralight-driver.cpp  vertex-array.cpp  vertex-array.h
src/raw-cpp/src/states/: level-state.cpp  level-state.h  states-manager.cpp  states-manager.h
src/raw-cpp/src/systems/: input-system.h  physic-system.h  question-functions.h  render-system.h
src/raw-cpp/test/states/: states-manager.spec.cpp
src/raw-cpp/www/: roll-goal.wasm
src/unity-ecs/Assets/Components/: InputComponent.cs  MotionComponent.cs
src/unity-ecs/Assets/Gui/: Landing.uxml
src/unity-ecs/Assets/Materials/: Ball.mat
src/unity-ecs/Assets/Scenes/: SampleScene.unity
src/unity-ecs/Assets/Systems/: MovementSystem.cs  PlayerInputSystem.cs
src/unity-ecs/Assets/Tests/: MovementSystemTests.cs
src/unity-ecs/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
src/unity-ecs/UIElementsSchema/: UnityEditor.PackageManager.UI.xsd  UnityEditor.UIElements.xsd  UnityEngine.UIElements.xsd
src/unity-go/Assets/Asset/: rollgoal.fbx
src/unity-go/Assets/Level/: Level-01.unity  Level-01Settings.lighting
src/unity-go/Assets/Materials/: Bleu.mat  M_Glass.mat  chemin.mat
src/unity-go/Assets/Script/: BallController.cs  BoardController.cs  CameraController.cs  Timer.cs
src/unity-go/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
src/unreal-cpp/: unreal.uproject
src/unreal-cpp/Source/unreal/: unreal.Build.cs  unrealBall.cpp  unrealBall.h  unrealGameMode.cpp
unity/Assets/Asset/: paths.3ds  paths.fbx
unity/Assets/Materials/: Material.002.mat  Rose.mat  Vert-angle.mat  rayure.mat
unity/Assets/Prefab/: PickUp.prefab
unity/Assets/Script/: BallController.cs  Rotator.cs  Timer.cs
unity/ProjectSettings/: DynamicsManager.asset
unreal/Config/: DefaultEngine.ini  DefaultGame.ini
unreal/Source/: unreal.Target.cs  unrealEditor.Target.cs
unreal/Source/unreal/: unreal.cpp  unrealGameMode.h
wasm/: .gitignore  CMakeLists.txt  README.md  conanfile.txt  graph_info.json
wasm/lib/glad/include/glad/: glad.h
wasm/src/: main.cpp
